--- a/formulario.html
+++ b/formulario.html
@@ -7,7 +7,7 @@
  <main>
 <h2>imagenes de gatos:</h2>
  <!--Todo: agregar enlaces -->
- <p>Haz click para ver más <a href="https://www.zooplus.es/magazine/gatos/gatitos" target="_blank">imagenes de gatos</a></p>
+ <p>HazZZ click para ver más <a href="https://www.zooplus.es/magazine/gatos/gatitos" target="_blank">imagenes de gatos</a></p>
  <a href="https://bit.ly/fcc-relaxing-cat"><img src="https://bit.ly/fcc-relaxing-cat" alt="un lindo gato naranja recostad sobre su espalda"></a>
 <hr>
 <h3>Listas de gatos</h3>
